kube/Deploy-Service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mybankdeployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapplabel
  template:
    metadata:
      labels:
        app: myapplabel
    spec:
      containers:
      - name: myapp
        image: docker.io/charankumarcpl/kubernetes:kube-update
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 8080


---
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  type: NodePort
  selector:
    app: myapplabel
  ports:
  - targetPort: 8080
    port: 8080
    nodePort: 32600
