kube/Deploy-service-networkpolicy.yaml

###########################################
#     NETWORK POLICY  #
###########################################
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: advaithabank-credit-networkpolicies
spec:
  podSelector:
    matchLabels:
      app: creditcard
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector: {}
          podSelector: # chooses pods with type=monitoring
            matchLabels:
              app: bankhome

###########################################
#     DEPLOYMENT AND SERVICES FROM BELOW  #
###########################################

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bankhome
  labels:
    app: bankhome
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bankhome
  template:
    metadata:
      labels:
        app: bankhome
    spec:
      containers:
        - name: bankhome
          image: docker.io/charankumarcpl/kubernetes:home
          resources:
            limits:
              memory: "50Mi"
              cpu: 10m
            requests:
              memory: "10Mi"
              cpu: 10m
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bankhome-service
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 32000
  selector:
    app: bankhome
---
# INTERNET-BANKING
apiVersion: apps/v1
kind: Deployment
metadata:
  name: internetbanking
  labels:
    app: internetbanking
spec:
  replicas: 2
  selector:
    matchLabels:
      app: internetbanking
  template:
    metadata:
      labels:
        app: internetbanking
    spec:
      containers:
        - name: internetbanking
          image: docker.io/charankumarcpl/kubernetes:internetbanking
          resources:
            limits:
              memory: "50Mi"
              cpu: 10m
            requests:
              memory: "10Mi"
              cpu: 10m
          ports:
            - containerPort: 5001

---
apiVersion: v1
kind: Service
metadata:
  name: internetbanking
spec:
  type: NodePort
  ports:
    - port: 5001
      targetPort: 5001
      nodePort: 32001
  selector:
    app: internetbanking

---
# Loan
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loan
  labels:
    app: loan
spec:
  replicas: 2
  selector:
    matchLabels:
      app: loan
  template:
    metadata:
      labels:
        app: loan
    spec:
      containers:
        - name: loan
          image: docker.io/charankumarcpl/kubernetes:loan
          resources:
            limits:
              memory: "50Mi"
              cpu: 10m
            requests:
              memory: "10Mi"
              cpu: 10m
          ports:
            - containerPort: 5002

---
apiVersion: v1
kind: Service
metadata:
  name: loan
spec:
  type: NodePort
  ports:
    - port: 5002
      targetPort: 5002
      nodePort: 32002
  selector:
    app: loan
---
# Shopping
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping
  labels:
    app: shopping
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shopping
  template:
    metadata:
      labels:
        app: shopping
    spec:
      containers:
        - name: shopping
          image: docker.io/charankumarcpl/kubernetes:shopping
          resources:
            limits:
              memory: "50Mi"
              cpu: 10m
            requests:
              memory: "10Mi"
              cpu: 10m
          ports:
            - containerPort: 5003

---
apiVersion: v1
kind: Service
metadata:
  name: shopping
spec:
  type: NodePort
  ports:
    - port: 5003
      targetPort: 5003
      nodePort: 32003
  selector:
    app: shopping

---
# CreditCard
apiVersion: apps/v1
kind: Deployment
metadata:
  name: creditcard
  labels:
    app: creditcard
spec:
  replicas: 2
  selector:
    matchLabels:
      app: creditcard
  template:
    metadata:
      labels:
        app: creditcard
    spec:
      containers:
        - name: creditcard
          image: docker.io/charankumarcpl/kubernetes:creditcard
          resources:
            limits:
              memory: "50Mi"
              cpu: 10m
            requests:
              memory: "10Mi"
              cpu: 10m
          ports:
            - containerPort: 5004

---
apiVersion: v1
kind: Service
metadata:
  name: creditcard
spec:
  type: NodePort
  ports:
    - port: 5004
      targetPort: 5004
      nodePort: 32004
  selector:
    app: creditcard
---
